# text2sql-finetune

./: .env.example  .gitignore  LESSONS.md  LICENSE  README.md  TODO.md  pyproject.toml
dataset/: dedupe.py  format.py  generate.py  validate.py
eval/: README.md
huggingface_card/: README.md
inference/: finetuned_agent.py
training/: config.py  train_kaggle.ipynb
